--- a/services/client/client-deployment.yaml
+++ b/services/client/client-deployment.yaml
@@ -33,8 +33,8 @@ spec:
       serviceAccountName: client
       containers:
         - name: client
-          image: daniel413x/broadly-client:dev
-          imagePullPolicy: Always
+          image: daniel413x/broadly-client:1.0.0
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
               name: http
@@ -59,8 +59,8 @@ spec:
               valueFrom: { secretKeyRef: { name: client-secrets, key: BLOB_READ_WRITE_TOKEN } }
           resources:
             requests:
-              memory: "4Gi"
-              cpu: "4"
+              memory: "200Mi"
+              cpu: "250m"
             limits:
-              memory: "10Gi"
-              cpu: "6"
+              memory: "704Mi"
+              cpu: "750m"
