add jmeter agent config

--- a/services/jenkins/Dockerfile
+++ b/services/jenkins/Dockerfile
@@ -17,6 +17,7 @@ RUN echo "deb [arch=$(dpkg --print-architecture) \
   https://download.docker.com/linux/debian \
   $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
+# kubernetes-client = kubectl
 RUN apt-get update && apt-get install -y docker-ce-cli nodejs kubernetes-client
 RUN export M2_HOME=/usr/bin/mvn; export MAVEN_HOME=/usr/bin/mvn
 RUN apt-get update && apt-get install -y chromium chromium-driver
@@ -28,5 +29,8 @@ RUN ./aws/install
 # performance testing -- install bzt (Taurus) dependencies 
 RUN apt-get update \
 && apt-get install -y python3 default-jre-headless python3-tk python3-pip python3-dev libxml2-dev libxslt-dev zlib1g-dev net-tools python3-virtualenv
+
+# install Taurus
+RUN pip3 install --no-cache-dir --break-system-packages bzt
 
 RUN jenkins-plugin-cli --plugins "maven-plugin workflow-aggregator git sonar nodejs kubernetes aws-credentials docker-workflow ssh-agent email-ext blueocean pipeline-aws docker-plugin configuration-as-code job-dsl workflow-multibranch scm-api branch-api http_request"
